# fswe-task

./: CMakeLists.txt  Dockerfile  Makefile  README.md  build.sh  calc.cpp  calc.h  exception.cpp  list.cpp  main.cpp  prereqs.sh  test.py  test.sh
.github/workflows/: c-cpp.yml
src/: CMakeLists.txt  calculator.cpp  calculator.h  main.cpp
test/: CMakeLists.txt  test_calculator.cpp
